# FastAPI-template

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  justfile  pyproject.toml  ruff.toml
alembic/: env.py
src/: config.py  database.py  decorators.py  dependencies.py  logger.py  main.py  models.py  schemas.py
src/abstractions/: repository.py  service.py  service_factory.py
src/middlewares/: logging_middleware.py
