[project]
name = "fastapi_template"
version = "0.0.1"
description = ""
authors = [
    {name = "Vladislav",email = "barabayne@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)",
    "rust-just (>=1.40.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
